# Sentinel

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  module38-report.html  module39-report.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: deploy.yml  release.yml
backend/: README.md
desktop/: .gitignore  CONTRIBUTING.md  ROADMAP.md  package-lock.json  package.json  phase2-report.html  tailwind.config.js
desktop/docs/: ARCHITECTURE.md  BENCHMARKING.md  CHANGELOG.md  DECISIONS.md  ENGINE_RULES.md  KNOWN_LIMITATIONS.md  LOCAL_DEVELOPMENT.md  PIPELINE.md  RELEASE_NOTES_v1.0.0-rc.1.md  ROADMAP.md  VERSIONING.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
docs/: ANALYSIS_MANIFESTO.md  ARCHITECTURE.md  BENCHMARKING.md  CHANGELOG.md  DECISIONS.md  ENGINE_RULES.md  INDICATOR_RULES.md  KNOWN_LIMITATIONS.md  LOCAL_DEVELOPMENT.md  Pipeline.md  QUALITY_GATE.md  ROADMAP.md  TESTING_STRATEGY.md  VALIDATION_RULES.md  VERSIONING.md  WRITING_GUIDELINES.md
mobile/: README.md
src/: App.tsx  index.css  server.ts
src-tauri/: Cargo.toml  tauri.conf.json
test-fixtures/: README.md
web/: DEPLOYMENT.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vercel.json  vite.config.ts
website/: index.html  package-lock.json  package.json  vite.config.ts
(+495 files in other folders)
