[package]
name = "sentinel"
version = "1.0.0-rc.1"
description = "Sentinel — Crypto Analysis Platform"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "sentinel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
